--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
   <distributionManagement>
       <repository>
           <id>internal</id>
-          <url>file:///home/jean-marc/.m2/repository</url>
+          <url>file:///home/jean-marc/maven/</url>
       </repository>
   </distributionManagement>  
 </project>
